--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,3 +3,16 @@
 
 en:
   time_slots: "Hello world"
+  spree:
+    january: "January"
+    february: "February"
+    march: "March"
+    april: "April"
+    may: "May"
+    june: "June"
+    july: "July"
+    august: "August"
+    september: "September"
+    october: "October"
+    november: "November"
+    december: "December
