--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -15,4 +15,4 @@ en:
     september: "September"
     october: "October"
     november: "November"
-    december: "December
+    december: "December"
